--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
   "devDependencies": {
     "@azure/functions": "^1.0.1-beta1",
     "npm-run-all": "^4.1.5",
-    "typescript": "^3.3.3",
-    "@types/tough-cookie": "^4.0.0",
-    "@types/request-promise": "^4.1.46"
+    "typescript": "^3.3.3"
   },
   "dependencies": {
-    "cheerio-httpcli": "^0.7.4",
-    "request-promise": "^4.2.5",
-    "tough-cookie": "^4.0.0"
+    "@types/node": "^13.13.5",
+    "typed-rest-client": "^1.7.3",
+    "urllib": "^2.34.2"
   }
 }
